# world-painter-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  util.rs
